versioned_docs/version-2021.1.3/professor/marcia_aparecida_barbosa.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";
const data = {
  title: "Marcia Aparecida Barbosa",
  weekClasses: [
    {
      dayName: "Segunda-Feira",
      dayClasses: [],
    },
    {
      dayName: "Terça-Feira",
      dayClasses: [],
    },
    {
      dayName: "Quarta-Feira",
      dayClasses: [
        {
          subject: "Didática geral - 76",
          size: 2,
          teachers: ["Marcia Aparecida Barbosa"],
          classroom: "",
          students: "BIO2020",
          time: "19:00 - 19:50",
        },
        {
          subject: "Didática geral - 76",
          size: 2,
          teachers: ["Marcia Aparecida Barbosa"],
          classroom: "",
          students: "BIO2020",
          time: "21:00 - 21:50",
        },
      ],
    },
    {
      dayName: "Quinta-Feira",
      dayClasses: [
        {
          subject: "Psicologia da educação - 72",
          size: 2,
          teachers: ["Marcia Aparecida Barbosa"],
          classroom: "",
          students: "BIO2020",
          time: "21:00 - 21:50",
        },
      ],
    },
    {
      dayName: "Sexta-Feira",
      dayClasses: [],
    },
  ],
  time: [
    {
      time: "07:30 - 08:20",
      size: 50,
    },
    {
      time: "08:20 - 09:10",
      size: 50,
    },
    {
      time: "09:10 - 09:25",
      size: 15,
    },
    {
      time: "09:25 - 10:15",
      size: 50,
    },
    {
      time: "10:15 - 11:05",
      size: 50,
    },
    {
      time: "11:05 - 11:55",
      size: 50,
    },
    {
      time: "11:55 - 13:10",
      size: 75,
    },
    {
      time: "13:10 - 14:00",
      size: 50,
    },
    {
      time: "14:00 - 14:50",
      size: 50,
    },
    {
      time: "14:50 - 15:05",
      size: 15,
    },
    {
      time: "15:05 - 15:55",
      size: 50,
    },
    {
      time: "15:55 - 16:45",
      size: 50,
    },
    {
      time: "16:45 - 19:00",
      size: 135,
    },
    {
      time: "19:00 - 19:50",
      size: 50,
    },
    {
      time: "19:50 - 20:40",
      size: 50,
    },
    {
      time: "20:40 - 21:00",
      size: 20,
    },
    {
      time: "21:00 - 21:50",
      size: 50,
    },
    {
      time: "21:50 - 22:40",
      size: 50,
    },
  ],
};

# Marcia Aparecida Barbosa

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
